week11 day2 notes udpdated
notes updated following answers

--- a/week_11/day_2/week11_day2_homework/week11_day2_homework.Rmd
+++ b/week_11/day_2/week11_day2_homework/week11_day2_homework.Rmd
@@ -189,4 +189,7 @@ titanic_test_pred %>%
   sensitivity(truth = survived_flag, estimate = pred)
 ```
 
+TPR - prob of someone surviving
+TNR - prob of someone not surviving
 
+Sensitivity and specificity depend on the question that you're setting, i.e. we are trying to predict the probability of someone not dying. 
