--- a/week_12/day_1/week12_day1_homework.ipynb
+++ b/week_12/day_1/week12_day1_homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3d2aa2f",
+   "id": "3f6e340b",
    "metadata": {},
    "source": [
     "## Week 12 Day 1 Homework"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2895b544",
+   "id": "5db78b6f",
    "metadata": {},
    "source": [
     "### Question 1\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a58909c6",
+   "id": "d5316a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0d8e04c",
+   "id": "ea87601e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "46d8dacb",
+   "id": "a8a1107a",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5039a52a",
+   "id": "b8a6c7f7",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f94e3169",
+   "id": "e21d61f7",
    "metadata": {},
    "source": [
     "### Question 2\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0293a00e",
+   "id": "51a2f4a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2211a96c",
+   "id": "ca02a830",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b5c434df",
+   "id": "ef026712",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "228f8762",
+   "id": "7998dea0",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b1b9c1d9",
+   "id": "112e567a",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3bf9c3b2",
+   "id": "bfc639a3",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a0e148a1",
+   "id": "e36482dd",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762e5052",
+   "id": "a89d6ce5",
    "metadata": {},
    "source": [
     "### Question 3\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e26098dd",
+   "id": "e505bf54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "117dbfe1",
+   "id": "4e283218",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "76a9ce2e",
+   "id": "dfcf8a95",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6b1b2ddb",
+   "id": "4a1af6ca",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ce24e882",
+   "id": "67850ad7",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "55cbb5b8",
+   "id": "ec79fdaa",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5e0c36b4",
+   "id": "46c1610b",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e205196",
+   "id": "835fa2b4",
    "metadata": {},
    "source": [
     "### Question 4\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "69d26dd9",
+   "id": "fc8992a2",
    "metadata": {
     "scrolled": true
    },
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f44bee82",
+   "id": "6da3d150",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "42a9bacd",
+   "id": "060ef0b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f88cd8e",
+   "id": "925c21fd",
    "metadata": {},
    "source": [
     "### Question 5\n",
@@ -570,13 +570,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "8b2d36ac",
+   "execution_count": 11,
+   "id": "e8fc27d2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "is_weird = True\n",
+    "is_fun = True\n",
+    "\n",
     "def python_function(is_weird, is_fun):\n",
-    "    if (is_weird == True or is_fun == True or is_weird == True and is_fun == True):\n",
+    "    if (is_weird == True):\n",
+    "        print('Woo Python!')\n",
+    "    elif (is_fun == True):\n",
     "        print('Woo Python!')\n",
     "    else:\n",
     "        print('Python is not for me!')\n",
@@ -586,19 +591,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "41db37d9",
+   "execution_count": 8,
+   "id": "204289ad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'is_weird' is not defined",
+     "ename": "TypeError",
+     "evalue": "python_function() missing 1 required positional argument: 'is_fun'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-cc169a72fc87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpython_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_weird\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'is_weird' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-cc169a72fc87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpython_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_weird\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: python_function() missing 1 required positional argument: 'is_fun'"
      ]
     }
    ],
@@ -607,9 +612,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a09a0be",
+   "metadata": {},
+   "source": [
+    "### Question 6\n",
+    "\n",
+    "We have a list of chickens and the farmer would like to go through all the chickens, collecting the eggs and getting the total number of eggs collected.\n",
+    "\n",
+    "chickens = [\n",
+    "  { \"name\": \"Margaret\", \"age\": 2, \"eggs\": 0 },\n",
+    "  { \"name\": \"Hetty\", \"age\": 1, \"eggs\": 2 },\n",
+    "  { \"name\": \"Henrietta\", \"age\": 3, \"eggs\": 1 },\n",
+    "  { \"name\": \"Audrey\", \"age\": 2, \"eggs\": 0 },\n",
+    "  { \"name\": \"Mabel\", \"age\": 5, \"eggs\": 1 },\n",
+    "]\n",
+    "\n",
+    "To write this as a loop, we'd do something like this:\n",
+    "\n",
+    "total_eggs = 0\n",
+    "\n",
+    "for chicken in chickens:\n",
+    "    total_eggs += chicken[\"eggs\"]\n",
+    "    chicken[\"eggs\"] = 0 # eggs have been collected\n",
+    "\n",
+    "print(f\"{total_eggs} eggs collected\")\n",
+    "\n",
+    "Instead, we want to define a function which passes in a list, so that if we wanted to count eggs of a different list of chickens from another farm, we can use the same function, just pass in a different list.\n",
+    "\n",
+    "We also want to return the string at the end, instead of using print."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1aa7cd7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-ed7368b1218a>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-ed7368b1218a>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    def chicken_function(chicken, [chickens]):\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "chickens = [{\"name\": \"Margaret\", \"age\": 2, \"eggs\": 0},\n",
+    "            {\"name\": \"Hetty\", \"age\": 1, \"eggs\": 2},\n",
+    "            {\"name\": \"Henrietta\", \"age\": 3, \"eggs\": 1},\n",
+    "            {\"name\": \"Audrey\", \"age\": 2, \"eggs\": 0},\n",
+    "            {\"name\": \"Mabel\", \"age\": 5, \"eggs\": 1 },]\n",
+    "\n",
+    "def chicken_function(chicken, []):\n",
+    "    for chicken in []:\n",
+    "        total_eggs += chicken[\"eggs\"]\n",
+    "        chicken[\"eggs\"] = 0 # eggs have been collected\n",
+    "        return(f\"{total_eggs} eggs collected\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33514dca",
+   "id": "abe983ae",
    "metadata": {},
    "outputs": [],
    "source": []
